--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,5 +1,27 @@
 extends ../shared/template
 
 block content
-  h1 Node.js Template
-  a.button.button-3d-highlight.button-circle(href='/help') Help
+  #logo
+
+  button#show-login Login
+  button#show-register Create Account
+
+  form#form-register(action='/register', method='post')
+    input(type='text', name='name', placeholder='Name')
+    input(type='email', name='email', placeholder='Email')
+    input(type='password', name='password', placeholder='Password')
+
+    input(type='radio', name='type', value='student')
+    | Student
+    input(type='radio', name='type', value='teacher')
+    | Teacher
+
+    .clear
+    button#register Create Account
+    a.back(href='#') Back
+
+  form#form-login(action='/login', method='post')
+    input(type='email', name='email', placeholder='Email Address')
+    input(type='password', name='password', placeholder='Password')
+    button#login Login
+    a.back(href='#') Back
