--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -3,25 +3,6 @@ extends ../shared/template
 block content
   #logo
 
-  button#show-login Login
-  button#show-register Create Account
-
-  form#form-register(action='/register', method='post')
-    input(type='text', name='name', placeholder='Name')
-    input(type='email', name='email', placeholder='Email')
-    input(type='password', name='password', placeholder='Password')
-
-    input(type='radio', name='type', value='student')
-    | Student
-    input(type='radio', name='type', value='teacher')
-    | Teacher
-
-    .clear
-    button#register Create Account
-    a.back(href='#') Back
-
-  form#form-login(action='/login', method='post')
-    input(type='email', name='email', placeholder='Email Address')
-    input(type='password', name='password', placeholder='Password')
-    button#login Login
-    a.back(href='#') Back
+  a.index-link(href='/student/login') Student Login
+  a.index-link(href='/teacher/login') Teacher Login
+  a.index-link(href='/register') Create Account
