--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -6,6 +6,7 @@ html
     link(href='/css/normalize.css', rel='stylesheet')
     link(href='/css/buttons.css', rel='stylesheet')
     link(href='/less/app.css', rel='stylesheet')
+    link(rel='stylesheet', type='text/css', href='../css/quill.snow.css')
   body
     header
       #header-content
@@ -34,5 +35,3 @@ html
     script(src='/js/es6/compiled/sockets.js')
 
     block scripts
-
-      script(src='/js/es6/compiled/main.js')
