--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,8 +1,11 @@
 extends ../shared/pre-login
 
 block content
-  #logo
+  #home-logo
+    img(src='/img/logo.svg')
 
   a.index-link(href='/student/login') Student Login
+  .clear
   a.index-link(href='/teacher/login') Teacher Login
+  .clear
   a.index-link(href='/register') Create Account
