--- a/app/views/shared/pre-login.jade
+++ b/app/views/shared/pre-login.jade
@@ -7,7 +7,8 @@ html
     link(href='/css/buttons.css', rel='stylesheet')
     link(href='/less/app.css', rel='stylesheet')
   body
-    block content
+    #pre-login-container
+      block content
 
     script(src='/js/vendor/jquery-2.1.1.js')
     script(src='/js/vendor/lodash-2.4.1.js')
