--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -6,15 +6,17 @@ html
     link(href='/css/normalize.css', rel='stylesheet')
     link(href='/css/buttons.css', rel='stylesheet')
     link(href='/less/app.css', rel='stylesheet')
+    link(rel='stylesheet', type='text/css', href='../css/quill.snow.css')
   body
     header
       #header-content
         #logo
-          img(src='/img/logo.png')
-        a(href='#') COURSES]
+          a(href='/')
+            img(src='/img/logo.svg')
+        a(href='#') COURSES
 
         #user
-          a#logout(href='/') Logout
+          a#logout(href='#') Logout
           #username
             if(teacher)
               p#user= teacher.name
