--- a/app/views/teachers/dashboard.jade
+++ b/app/views/teachers/dashboard.jade
@@ -3,3 +3,6 @@ extends ../shared/template
 block content
   h1 Teacher Dashboard
   h3= teacher.name
+
+  form(action='/course/new', method='get')
+    button#newcourse Create a Course
