--- a/app/views/courses/new.jade
+++ b/app/views/courses/new.jade
@@ -1,9 +1,10 @@
 extends ../shared/template
 
 block content
-  script(src='/js/vendor/quill.js')
-  #container
+    h2= course.title
+
     button#addlesson Add Lesson
+    button#addtest Add Test
 
     .clear
 
@@ -34,7 +35,6 @@ block content
               span.sc-format-button.sc-strike(title='Strikethrough')
 
             span.sc-format-group
-              //span.sc-color.sc-color-picker(title='Text Color')
               select.sc-color(title='Text Color')
                 option(value='rgb(255, 255, 255)')
                 option(value='rgb(0, 0, 0)', selected)
@@ -69,53 +69,17 @@ block content
               span.sc-format-button.sc-clear(title='Clear Formats') Clear
           #full-editor.editor.sc-container
 
-    script(src='/js/es6/compiled/courses.js')
-    script(type='text/javascript').
-      // Initialize editor with custom theme and modules
-      var fullEditor = new Quill('#full-editor', {
-        modules: {
-          'authorship': { enabled: true },
-          'multi-cursor': true,
-          'toolbar': { container: '#full-toolbar' },
-          'image-tooltip': true,
-          'link-tooltip': true
-        },
-        theme: 'snow'
-      });
-
-
-
-      //- // Add basic editor's author
-      //- var authorship = fullEditor.getModule('authorship');
-      //- authorship.addAuthor('gandalf', 'rgba(255,153,51,0.4)');
-      //-
-      //- // Add a cursor to represent basic editor's cursor
-      //- var cursorManager = fullEditor.getModule('multi-cursor');
-      //- cursorManager.setCursor('gandalf', fullEditor.getLength()-1, 'Gandalf', 'rgba(255,153,51,0.9)');
-      //-
-      //- // Sync basic editor's cursor location
-      //- basicEditor.on('selection-change', function(range) {
-      //-   if (range) {
-      //-     cursorManager.moveCursor('gandalf', range.end);
-      //-   }
-      //- });
-      //-
-      //- // Update basic editor's content with ours
-      //- fullEditor.on('text-change', function(delta, source) {
-      //-   if (source === 'user') {
-      //-     basicEditor.updateContents(delta);
-      //-   }
-      //- });
-      //-
-      //- // basicEditor needs authorship module to accept changes from fullEditor's authorship module
-      //- basicEditor.addModule('authorship', {
-      //-   authorId: 'gandalf',
-      //-   color: 'rgba(255,153,51,0.4)'
-      //- });
-      //-
-      //- // Update our content with basic editor's
-      //- basicEditor.on('text-change', function(delta, source) {
-      //-   if (source === 'user') {
-      //-     fullEditor.updateContents(delta);
-      //-   }
-      //- });
+block scripts
+  script(src='/js/vendor/quill.js')
+  script(src='/js/es6/compiled/courses.js')
+  script(type='text/javascript').
+    var fullEditor = new Quill('#full-editor', {
+      modules: {
+        'authorship': { enabled: true },
+        'multi-cursor': true,
+        'toolbar': { container: '#full-toolbar' },
+        'image-tooltip': true,
+        'link-tooltip': true
+      },
+      theme: 'snow'
+    });
