--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -23,7 +23,8 @@ html
             if(student)
               p#user= student.name
 
-    block content
+    #container
+      block content
 
     script(src='/js/vendor/jquery-2.1.1.js')
     script(src='/js/vendor/lodash-2.4.1.js')
