--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -23,6 +23,7 @@ html
             if(student)
               p#user= student.name
 
+  #container
     block content
 
     script(src='/js/vendor/jquery-2.1.1.js')
@@ -34,5 +35,6 @@ html
     script(src='/js/es5/main.js')
     script(src='/js/es6/compiled/main.js')
     script(src='/js/es6/compiled/sockets.js')
+    script(src='http://quilljs.com/js/quill.js')
 
     block scripts
