--- a/app/views/teachers/dashboard.jade
+++ b/app/views/teachers/dashboard.jade
@@ -4,5 +4,15 @@ block content
   h1 Teacher Dashboard
   h3= teacher.name
 
-  form(action='/course/new', method='get')
-    button#newcourse Create a Course
+
+  button#new-course Create a Course
+
+  #create-course-form
+    form(action='/course/new', method='post')
+      input(type='text', name='title', placeholder='Course Title')
+      input(type='text', name='description', placeholder='Course Description')
+      button#save-new-course Save Course
+
+
+block scripts
+  script(src='/js/es6/compiled/courses.js')
