--- a/app/views/teachers/dashboard.jade
+++ b/app/views/teachers/dashboard.jade
@@ -13,6 +13,11 @@ block content
       input(type='text', name='description', placeholder='Course Description')
       button#save-new-course Save Course
 
+  each course in courses
+    h2= course.title
+    each lesson in course.material
+      h3= lesson.title
+      h3= lesson.content
 
 block scripts
   script(src='/js/es6/compiled/courses.js')
