--- a/app/views/courses/new.jade
+++ b/app/views/courses/new.jade
@@ -14,84 +14,78 @@ block content
     button#addtest Add Test
 
     .clear
+    #builder
+      #modal-1.md-modal.md-effect-1
+        .md-content
+            h3 Modal Dialog
 
+            .lesson-builder
+              input#title(type='text', name='title', placeholder='Lesson Title')
+              input#description(type='text', name='description', placeholder='Lesson Description')
+              .quill-wrapper
+                #full-toolbar.toolbar.sc-toolbar-container
+                  span.sc-format-group
+                    select.sc-font(title='Font')
+                      option(value='sans-serif', selected) Sans Serif
+                      option(value='Georgia, serif') Serif
+                      option(value='Monaco, "Courier New", monospace') Monospace
+                    select.sc-size(title='Size')
+                      option(value='10px') Small
+                      option(value='13px', selected) Normal
+                      option(value='18px') Large
+                      option(value='32px') Huge
 
-    #modal-1.md-modal.md-effect-1
-      .md-content
-          h3 Modal Dialog
+                  span.sc-format-group
+                    span.sc-format-button.sc-bold(title='Bold')
+                    span.sc-format-separator
+                    span.sc-format-button.sc-italic(title='Italic')
+                    span.sc-format-separator
+                    span.sc-format-button.sc-underline(title='Underline')
+                    span.sc-format-separator
+                    span.sc-format-button.sc-strike(title='Strikethrough')
 
-          .lesson-builder
-            input#title(type='text', name='title', placeholder='Lesson Title')
-            input#description(type='text', name='description', placeholder='Lesson Description')
-            .quill-wrapper
-              #full-toolbar.toolbar.sc-toolbar-container
-                span.sc-format-group
-                  select.sc-font(title='Font')
-                    option(value='sans-serif', selected) Sans Serif
-                    option(value='Georgia, serif') Serif
-                    option(value='Monaco, "Courier New", monospace') Monospace
-                  select.sc-size(title='Size')
-                    option(value='10px') Small
-                    option(value='13px', selected) Normal
-                    option(value='18px') Large
-                    option(value='32px') Huge
+                  span.sc-format-group
+                    select.sc-color(title='Text Color')
+                      option(value='rgb(255, 255, 255)')
+                      option(value='rgb(0, 0, 0)', selected)
+                      option(value='rgb(255, 0, 0)')
+                      option(value='rgb(0, 0, 255)')
+                      option(value='rgb(0, 255, 0)')
+                      option(value='rgb(0, 128, 128)')
+                      option(value='rgb(255, 0, 255)')
+                      option(value='rgb(255, 255, 0)')
 
-                span.sc-format-group
-                  span.sc-format-button.sc-bold(title='Bold')
-                  span.sc-format-separator
-                  span.sc-format-button.sc-italic(title='Italic')
-                  span.sc-format-separator
-                  span.sc-format-button.sc-underline(title='Underline')
-                  span.sc-format-separator
-                  span.sc-format-button.sc-strike(title='Strikethrough')
+                    span.sc-format-separator
+                    select.sc-background(title='Background Color')
+                      option(value='rgb(255, 255, 255)', selected)
+                      option(value='rgb(0, 0, 0)')
+                      option(value='rgb(255, 0, 0)')
+                      option(value='rgb(0, 0, 255)')
+                      option(value='rgb(0, 255, 0)')
+                      option(value='rgb(0, 128, 128)')
+                      option(value='rgb(255, 0, 255)')
+                      option(value='rgb(255, 255, 0)')
+                    select.sc-align(title='Text Alignment')
+                      option(value='left', selected)
+                      option(value='center')
+                      option(value='right')
+                      option(value='justify')
 
-                span.sc-format-group
-                  select.sc-color(title='Text Color')
-                    option(value='rgb(255, 255, 255)')
-                    option(value='rgb(0, 0, 0)', selected)
-                    option(value='rgb(255, 0, 0)')
-                    option(value='rgb(0, 0, 255)')
-                    option(value='rgb(0, 255, 0)')
-                    option(value='rgb(0, 128, 128)')
-                    option(value='rgb(255, 0, 255)')
-                    option(value='rgb(255, 255, 0)')
+                  span.sc-format-group
+                    span.sc-format-button.sc-link(title='Link')
+                    span.sc-format-separator
+                    span.sc-format-button.sc-image(title='Image')
+                    span.sc-format-separator
+                    span.sc-format-button.sc-clear(title='Clear Formats') Clear
+                #full-editor.editor.sc-container
+              button.md-close#savelesson Save Lesson
 
-                  span.sc-format-separator
-                  select.sc-background(title='Background Color')
-                    option(value='rgb(255, 255, 255)', selected)
-                    option(value='rgb(0, 0, 0)')
-                    option(value='rgb(255, 0, 0)')
-                    option(value='rgb(0, 0, 255)')
-                    option(value='rgb(0, 255, 0)')
-                    option(value='rgb(0, 128, 128)')
-                    option(value='rgb(255, 0, 255)')
-                    option(value='rgb(255, 255, 0)')
-                  select.sc-align(title='Text Alignment')
-                    option(value='left', selected)
-                    option(value='center')
-                    option(value='right')
-                    option(value='justify')
-
-                span.sc-format-group
-                  span.sc-format-button.sc-link(title='Link')
-                  span.sc-format-separator
-                  span.sc-format-button.sc-image(title='Image')
-                  span.sc-format-separator
-                  span.sc-format-button.sc-clear(title='Clear Formats') Clear
-              #full-editor.editor.sc-container
-            button#savelesson Save Lesson
-
-          button.md-close Close me!
-
-
-
-
-    #lessons
-    .md-overlay
+      .md-overlay
 
 
 block scripts
   script(src='/js/vendor/quill.js')
   script(src='/js/es6/compiled/lessons.js')
+  script(src='/js/es6/compiled/tests.js')
   script(src='/js/vendor/classie.js')
   script(src='/js/vendor/modalEffects.js')
