--- a/app/views/courses/new.jade
+++ b/app/views/courses/new.jade
@@ -84,6 +84,7 @@ block content
 
 
 block scripts
+  link(href='/css/quill.snow.css', rel='stylesheet')
   script(src='/js/vendor/quill.js')
   script(src='/js/es6/compiled/lessons.js')
   script(src='/js/es6/compiled/tests.js')
