--- a/app/views/courses/test-builder.jade
+++ b/app/views/courses/test-builder.jade
@@ -8,8 +8,11 @@ form#test(action='/course/#{course._id}/addTest', method='post')
     p Solution
     input(type='text', name='solution', placeholder='Correct answer')
     p Alternate Choices
-    input#wronganswer(type='text', name='wronganswer', placeholder='Alt Answer 1')
-    input#wronganswer(type='text', name='wronganswer', placeholder='Alt Answer 2')
-    input#wronganswer(type='text', name='wronganswer', placeholder='Alt Answer 3')
+    input(type='text', name='wronganswer', placeholder='Alt Answer 1')
+    input(type='text', name='wronganswer', placeholder='Alt Answer 2')
+    input(type='text', name='wronganswer', placeholder='Alt Answer 3')
 
 button#savetest Save Test
+
+block scripts
+  script(src='/js/es6/compiled/lessons.js')
