--- a/app/views/courses/test.jade
+++ b/app/views/courses/test.jade
@@ -3,11 +3,22 @@ extends ../shared/template
 block content
   h2= course.title
 
-  form(action='/course/#{course._id}/test', method='post')
-    each problem in course.test
-      p= problem.question
-      each choice in problem.choices
-        input.choice(type='radio', name='#{problem.question}', value='#{choice}')
-        | #{choice}
-        .clear
-    button#results Submit Answers
+  if(teacher)
+    form(action='/course/#{course._id}/test', method='post')
+      each problem in course.test
+        p= problem.question
+        each choice in problem.choices
+          input.choice(type='radio', name='#{problem.question}', value='#{choice}')
+          | #{choice}
+          .clear
+      button#results Submit Answers
+
+  if(student)
+    form(action='/student/course/#{course._id}/test', method='post')
+      each problem in course.test
+        p= problem.question
+        each choice in problem.choices
+          input.choice(type='radio', name='#{problem.question}', value='#{choice}')
+          | #{choice}
+          .clear
+      button#results Submit Answers
