--- a/app/less/app.less
+++ b/app/less/app.less
@@ -8,6 +8,10 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+.avatar {
+  height: 50px;
+  width: 50px;
+}
 .inline {
   display:inline-block;
 }
