--- a/app/views/courses/showall.jade
+++ b/app/views/courses/showall.jade
@@ -1,21 +1,22 @@
 extends ../shared/template
 
 block content
-  h1 Courses
+  h2.library-title Course Library
 
-  if(teacher)
-    each course in courses
-      .course(data-id='#{course._id}')
-        a.showcourse(href='/course/#{course._id}/show')
-          h2= course.title
-          p= course.description
+  #courses
+    if(teacher)
+      each course in courses
+        .course(data-id='#{course._id}')
+          a.showcourse(href='/course/#{course._id}/show')
+            h2= course.title
+            p= course.description
 
-  if(student)
-    each course in courses
-      .course(data-id='#{course._id}')
-        a.showcourse(href='/student/course/#{course._id}/show')
-          h2= course.title
-          p= course.description
+    if(student)
+      each course in courses
+        .course(data-id='#{course._id}')
+          a.showcourse(href='/student/course/#{course._id}/show')
+            h2= course.title
+            p= course.description
 
 block scripts
   script(src='/js/es6/compiled/courses.js')
