--- a/app/views/shared/pre-login.jade
+++ b/app/views/shared/pre-login.jade
@@ -7,6 +7,11 @@ html
     link(href='/css/buttons.css', rel='stylesheet')
     link(href='/less/app.css', rel='stylesheet')
   body
+    header.pre-login
+      #header-content
+        #home-logo
+          a(href='/')
+            img(src='/img/logo.svg')
     #pre-login-container
       block content
 
