--- a/app/views/students/login.jade
+++ b/app/views/students/login.jade
@@ -7,4 +7,4 @@ block content
     input(type='email', name='email', placeholder='Email Address')
     input(type='password', name='password', placeholder='Password')
     button#login Login
-    a.back(href='#') Back
+    a.back(href='/') Back
